# wizard-test-1

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codspeed.yml
src/: parse_pr.py
tests/: pr_body.txt  test_iterative_fibo.py  test_parse_pr.py  test_random.py  test_recursive_fibo.py  test_recursive_fibo_cached.py
