[project]
name = "wizard-test-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "pytest~=8.3.2",
    "pytest-benchmark~=4.0.0",
]

[tool.uv]
required-version = ">=0.5.20" # will be picked up by the astral-sh/setup-uv GH action

[dependency-groups]
dev = [
    "pytest-codspeed>=4.3.0",
]
